done: all swagger documentation

--- a/composer.json
+++ b/composer.json
@@ -53,6 +53,9 @@
         ],
         "pint": [
             "./vendor/bin/pint"
+        ],
+        "test": [
+            "./vendor/bin/phpunit"
         ]
     },
     "extra": {
